fix some bugs in TermTupleScanner.java, fix gitignore

--- a/test/Experiment1Test/test-output/old/All Test Suite/toc.html
+++ b/test/Experiment1Test/test-output/old/All Test Suite/toc.html
@@ -28,74 +28,10 @@
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/IndexTest.java (2/5/3)</td><td valign='top' align='right'>
-  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/IndexTest.java.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/query/IndexSearcherTest.java (0/3/0)</td><td valign='top' align='right'>
-  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/query/IndexSearcherTest.java.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/DocumentBuilderTest.java (0/0/2)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/DocumentBuilderTest.java (7/0/0)</td><td valign='top' align='right'>
   <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/DocumentBuilderTest.java.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/LengthTermTupleFilterTest.java (0/0/1)</td><td valign='top' align='right'>
-  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/LengthTermTupleFilterTest.java.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/PatternTermTupleFilterTest.java (0/0/1)</td><td valign='top' align='right'>
-  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/PatternTermTupleFilterTest.java.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/ScannerFilterAllInOneTest.java (0/0/1)</td><td valign='top' align='right'>
-  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/ScannerFilterAllInOneTest.java.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/StopWordTermTupleFilterTest.java (0/0/1)</td><td valign='top' align='right'>
-  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/StopWordTermTupleFilterTest.java.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/TermTupleScannerTest.java (0/0/1)</td><td valign='top' align='right'>
-  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/TermTupleScannerTest.java.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/query/HitTest.java (0/0/9)</td><td valign='top' align='right'>
-  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/query/HitTest.java.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -104,6 +40,14 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/DocumentTest.java (12/0/0)</td><td valign='top' align='right'>
   <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/DocumentTest.java.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/IndexTest.java (10/0/0)</td><td valign='top' align='right'>
+  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/IndexTest.java.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -136,6 +80,62 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/TermTupleTest.java (4/0/0)</td><td valign='top' align='right'>
   <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/index/TermTupleTest.java.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/LengthTermTupleFilterTest.java (2/0/0)</td><td valign='top' align='right'>
+  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/LengthTermTupleFilterTest.java.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/PatternTermTupleFilterTest.java (2/0/0)</td><td valign='top' align='right'>
+  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/PatternTermTupleFilterTest.java.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/ScannerFilterAllInOneTest.java (2/0/0)</td><td valign='top' align='right'>
+  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/ScannerFilterAllInOneTest.java.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/StopWordTermTupleFilterTest.java (3/0/0)</td><td valign='top' align='right'>
+  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/StopWordTermTupleFilterTest.java.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/TermTupleScannerTest.java (2/0/0)</td><td valign='top' align='right'>
+  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/parse/TermTupleScannerTest.java.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/query/HitTest.java (16/0/0)</td><td valign='top' align='right'>
+  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/query/HitTest.java.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/query/IndexSearcherTest.java (3/0/0)</td><td valign='top' align='right'>
+  <a href='D:/IdeaWorkspace/SeachEngine/test/hust/cs/javacourse/search/query/IndexSearcherTest.java.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
